--- a/src/regular-section/regular-section.less
+++ b/src/regular-section/regular-section.less
@@ -1,10 +1,9 @@
-@image-section-width: 30vw;
-@content-section-width: 60vw;
+@image-section-width: 30%;
+@content-section-width: 60%;
 @content-section-height: 50vh;
 
 .section-container {
   height: 100%;
-  width: 100%;
 
   .content-container, .image-container {
     display: inline-block;
